# railgun-rs

./: .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  README.md  TODO  broadcasters.md  flake.nix  justfile  shell.nix
.github/workflows/: ci.yaml
artifacts/01x02/: inputs.json  r1cs.br
docs/: compatibility.md  secret-mangement.md
flakes/: circom.nix
poseidon-rust/: Cargo.toml
railgun-rs/: Cargo.toml  justfile
railgun-rs/artifacts/: 01x02.r1cs
railgun-rs/benches/: merkle_tree.rs
railgun-rs/graphql/queries/: commitments.graphql  nullifiers.graphql  operations.graphql
railgun-rs/src/: account.rs  caip.rs  chain_config.rs  lib.rs  main.rs  merkle_tree.rs  transact.rs
railgun-rs/src/abis/: railgun.rs
railgun-rs/src/circuit/: artifacts.rs  circuit_input.rs  groth16_prover.rs  mod.rs  native_prover.rs  poi_inputs.rs  proof.rs  prover.rs  transact_inputs.rs  witness.rs
railgun-rs/src/circuit/inputs/: circuit_input.rs  mod.rs  poi_inputs.rs  transact_inputs.rs
railgun-rs/src/circuit/native/: fs_artifact_loader.rs  groth16_prover.rs  mod.rs  wasmer_witness_calculator.rs
railgun-rs/src/circuit/snapshots/: railgun_rs__circuit__proof__tests__proof_serialization.snap
railgun-rs/src/crypto/: aes.rs  babyjubjub.rs  keys.rs  mod.rs  poseidon.rs  railgun_txid.rs  railgun_utxo.rs  railgun_zero.rs
railgun-rs/src/crypto/snapshots/: railgun_rs__crypto__railgun_txid__tests__txid_leaf_hash.snap
railgun-rs/src/indexer/: compat.rs  graphql_bigint.rs  indexed_account.rs  indexer.rs  mod.rs  notebook.rs  rpc_syncer.rs  subsquid_syncer.rs  syncer.rs
railgun-rs/src/merkle_trees/: merkle_proof.rs  merkle_tree.rs
railgun-rs/src/note/: encrypt.rs  mod.rs  note.rs  operation.rs  shield.rs  transact.rs  transfer.rs  unshield.rs  utxo.rs
railgun-rs/src/note/snapshots/: railgun_rs__note__shield__tests__shield_snap.snap
railgun-rs/src/poi/: client.rs  inner_client.rs  inner_types.rs  mod.rs  poi_note.rs
railgun-rs/src/railgun/: address.rs  mod.rs  poi_provider.rs  provider.rs
railgun-rs/src/railgun/broadcaster/: broadcaster.rs  broadcaster_manager.rs  content_topics.rs  mod.rs  transport.rs  types.rs
railgun-rs/src/railgun/broadcaster/snapshots/: railgun_rs__railgun__broadcaster__broadcaster__test__encrypt_transaction.snap  railgun_rs__railgun__broadcaster__broadcaster__test__serialize_params.snap
railgun-rs/src/railgun/indexer/: indexed_account.rs  indexer.rs  mod.rs  notebook.rs  rpc_syncer.rs  subsquid_syncer.rs  txid_indexer.rs  txid_tree_set.rs  utxo_indexer.rs
railgun-rs/src/railgun/indexer/syncer/: chained_syncer.rs  mod.rs  rpc_syncer.rs  subsquid_syncer.rs  syncer.rs
railgun-rs/src/railgun/merkle_tree/: merkle_proof.rs  merkle_tree.rs  mod.rs  smart_wallet_verifier.rs  txid_tree.rs  utxo_tree.rs  verifier.rs
railgun-rs/src/railgun/note/: encrypt.rs  mod.rs  operation.rs  shield.rs  transfer.rs  unshield.rs  utxo.rs
railgun-rs/src/railgun/note/snapshots/: railgun_rs__railgun__note__encrypt__tests__encrypt_snap.snap  railgun_rs__railgun__note__shield__tests__shield_snap.snap  railgun_rs__railgun__note__utxo__tests__note_spending_pubkey.snap
railgun-rs/src/railgun/poi/: inner_client.rs  mod.rs  pending_poi_submitter.rs  poi_client.rs  poi_note.rs  types.rs
railgun-rs/src/railgun/transaction/: broadcaster_data.rs  gas_estimator.rs  mod.rs  operation_builder.rs  poi_proved_transaction.rs  proved_transaction.rs  shield_builder.rs  transaction_builder.rs  tx_data.rs
railgun-rs/src/transaction/: mod.rs  operation_builder.rs  shield_builder.rs  tx_builder.rs  tx_data.rs
railgun-rs/src/wasm/: bindings.rs  broadcast_data.rs  broadcaster.rs  fee_info.rs  indexer.rs  mod.rs  poi_client.rs  prover.rs  provider.rs  transaction.rs
railgun-rs/tests/fixtures/: indexer_state.bincode  poi_03x03_circuit_inputs.json  test_01x02_transaction_circuit_inputs.json
railgun-rs/tests/integration/: main.rs  sync.rs  sync_txid.rs  sync_utxo.rs  transact.rs
railgun-rs/tests/integration/common/: anvil.rs
sdk-js/: justfile  main.ts  package.json  pnpm-lock.yaml
sdk-js/src/: _broadcaster.ts  mod.ts  prover.ts  waku-transport.ts  wasm.ts
sdk-js/tests/: transact_test.ts
secrets/: secrets.yaml
src/: account.rs  aes.rs  caip.rs  chain_config.rs  erc20.rs  lib.rs  main.rs  merkle_tree.rs  railgun.rs  railgun_address.rs  shield_note.rs  transaction.rs  tx_data.rs
src/abis/: railgun.rs
src/circuit/: circom_reduction.rs  inputs.rs  mod.rs  native_prover.rs  poi_inputs.rs  prover.rs  transact_inputs.rs  zkey.rs
src/crypto/: aes.rs  ed25519.rs  eddsa.rs  keys.rs  mod.rs  poseidon.rs  railgun.rs  railgun_base_37.rs  railgun_txid.rs  railgun_utxo.rs
src/indexer/: account.rs  graphql_bigint.rs  indexer.rs  mod.rs  notebook.rs  rpc_syncer.rs  subsquid_client.rs  subsquid_syncer.rs  syncer.rs
src/note/: change.rs  mod.rs  note.rs  operation.rs  shield.rs  transact.rs  transfer.rs  tree_transaction.rs  unshield.rs
src/poi/: client.rs  inner_client.rs  inner_types.rs
src/railgun/: address.rs  mod.rs  sol.rs
src/transaction/: mod.rs  shield_builder.rs  tx_builder.rs  tx_builder_old.rs
tests/fixtures/: state.json
tests/integration/: sync.rs  transact.rs
