[package]
name = "railgun-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
alloy = "1.0.42"
alloy-contract = "1.0.42"
alloy-sol-types = "1.5.4"
anyhow = "1.0.101"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
async-trait = "0.1.89"
babyjubjub-rs = "0.0.11"
bech32 = "0.11.1"
bitcode = { version = "0.6.9", features = ["serde"] }
byteorder = "1.5.0"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
cynic = "3.12.0"
ed25519-dalek = "2.2.0"
ff_ce = "0.11"
futures = "0.3.31"
graphql_client = "0.16.0"
hex = "0.4.3"
light-poseidon = "0.4.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
paste = "1.0.15"
poseidon-rs = "0.0.8"
rand = "0.9.2"
reqwest = "0.13"
rs_merkle = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22" }
wasm-bindgen = "0.2.108"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ark-circom = "0.5.0"
rayon = "1.11.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }
tokio = { version = "1.49", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

[dev-dependencies]
serial_test = "3.3.1"
tracing-test = "0.2.5"

[package.metadata.graphql]
scalars = { "BigInt" = "U256", "Bytes" = "Bytes" }
