[workspace]
members = ["poseidon-rust", "railgun-rs"]
resolver = "3"

[workspace.dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
alloy = "1.5"
alloy-contract = "1.5"
alloy-sol-types = "1.5"
anyhow = "1.0.101"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
async-trait = "0.1.89"
bech32 = "0.11.1"
bitcode = "0.6.9"
byteorder = "1.5.0"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
cynic = "3.12.0"
ed25519-dalek = "2.2.0"
ff_ce = "0.11"
futures = "0.3.31"
graphql_client = "0.16.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
rand = "0.9.2"
serde = "1"
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wasm-bindgen = "0.2.108"
lazy_static = "1.5.0"
itertools = "0.14.0"
ark-circom = "0.5.0"
rayon = "1.11.0"
tokio = "1.49"
criterion = "0.8.2"
serial_test = "3.3.1"
tracing-test = "0.2.5"
poseidon-rust = { path = "./poseidon-rust" }
wasmer = "4.4.0"

[profile.release]
debug = true
