[workspace]
members = ["poseidon-rust", "railgun-rs"]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
alloy = "1.5"
alloy-contract = "1.5"
alloy-sol-types = "1.5"
anyhow = "1.0.101"
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-ec = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
async-trait = "0.1.89"
bech32 = "0.11.1"
bitcode = "0.6.9"
blake-hash = { version = "0.2.0", default-features = false }
byteorder = "1.5.0"
console_error_panic_hook = "0.1"
criterion = "0.8.2"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
cynic = "3.12.0"
ed25519-dalek = "2.2.0"
ff_ce = "0.11"
futures = "0.3.31"
gloo-timers = "0.3.0"
graphql_client = "0.16.0"
hex = "0.4.3"
insta = "1.46.3"
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
poseidon-rust = { path = "./poseidon-rust" }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
reqwest = { version = "0.13", default-features = false }
ruint = "1.17.2"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1.0.149"
serde_with = "3.16.1"
serial_test = "3.3.1"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = "1.49"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tracing-wasm = "0.2"
tsify-next = "0.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
wasmer = "4.4.0"
web-time = "1.1.0"

[profile.release]
debug = true
opt-level = "z"
# lto = true
codegen-units = 1
# panic = "abort"
strip = false

[profile.dev.package."*"]
opt-level = "z"
