[package]
name = "railgun-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
alloy = { workspace = true }
alloy-contract = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
async-trait = { workspace = true }
babyjubjub-rs = { workspace = true }
bech32 = { workspace = true }
bitcode = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
ctr = { workspace = true }
curve25519-dalek = { workspace = true }
cynic = { workspace = true }
ed25519-dalek = { workspace = true }
ff_ce = { workspace = true }
futures = { workspace = true }
graphql_client = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true }
ark-circom = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
poseidon-rust = { workspace = true }
poseidon-rs = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serial_test = { workspace = true }
tracing-test = { workspace = true }

[package.metadata.graphql]
scalars = { "BigInt" = "U256", "Bytes" = "Bytes" }
