[package]
name = "railgun-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
native = ["wasmer", "ark-circom", "reqwest/rustls"]
wasm = [
    "wasm-bindgen-futures",
    "js-sys",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
    "getrandom_02",
    "getrandom/wasm_js",
    "tracing-wasm",
]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
debug = true

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
alloy = { workspace = true }
alloy-contract = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow.workspace = true
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
async-trait = { workspace = true }
bech32 = { workspace = true }
bitcode = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
ctr = { workspace = true }
curve25519-dalek = { workspace = true }
cynic = { workspace = true }
ed25519-dalek = { workspace = true }
ff_ce = { workspace = true }
futures = { workspace = true }
graphql_client = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
poseidon-rust = { workspace = true }
ruint = { version = "1.17.2", features = ["num-bigint", "serde", "ark-ff-05"] }
wasmer = { workspace = true, optional = true }
ark-circom = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom_02 = { package = "getrandom", version = "0.2", features = [
    "js",
], optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
blake-hash = { version = "0.2.0", default-features = false }
tracing-wasm = { optional = true, version = "0.2.1" }

[dev-dependencies]
insta = { version = "1.46.3" }
criterion = { workspace = true }
serial_test = { workspace = true }
tracing-test = { workspace = true }
rand_chacha = "0.9.0"

[package.metadata.graphql]
scalars = { "BigInt" = "U256", "Bytes" = "Bytes" }
